# spotprices

./: README.rst  spotprices.cabal  stack.yaml
src/: Aws.hs  Main.hs  Types.hs  Utils.hs
