name:                spotprices
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/spotprices#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable spotprices
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , amazonka == 1.4.4.*
                     , amazonka-ec2
                     , amazonka-core
                     , lens
                     , text
                     , time
                     , bytestring
                     , transformers
                     , containers
                     , turtle
                     , boxes
  default-extensions:  DataKinds
                     , TemplateHaskell
                     , TypeOperators
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , OverloadedStrings
                     , DuplicateRecordFields
                     , GeneralizedNewtypeDeriving
                     , ScopedTypeVariables
                     , FlexibleInstances
